--- a/core/templates/includes/sidebar.html
+++ b/core/templates/includes/sidebar.html
@@ -2,12 +2,11 @@
     <nav class="pcoded-navbar">
         <div class="navbar-wrapper">
             <div class="navbar-brand header-logo">
-                <a target="_blank" 
-                   href="https://appseed.us/admin-dashboards/django-dashboard-dattaable" class="b-brand">
+                <a target="_blank" class="b-brand">
                     <div class="b-bg">
-                        <i class="feather icon-trending-up"></i>
+                        <i class="feather icon-users"></i>
                     </div>
-                    <span class="b-title">Django Datta Able</span>
+                    <span class="b-title">DigiMate</span>
                 </a>
                 <a class="mobile-menu" id="mobile-collapse" href="javascript:"><span></span></a>
             </div>
@@ -20,6 +19,19 @@
                         class="nav-item {% if 'index' in segment %} active {% endif %}">
                         <a href="/" class="nav-link "><span class="pcoded-micon"><i class="feather icon-home"></i></span><span class="pcoded-mtext">Dashboard</span></a>
                     </li>
+                    {% comment %} <li class="nav-item pcoded-menu-caption">
+                        <label>Categories</label>
+                    </li> {% endcomment %}
+                    <li data-username="basic components Button Alert Badges breadcrumb Paggination progress Tooltip popovers Carousel Cards Collapse Tabs pills Modal Grid System Typography Extra Shadows Embeds" class="nav-item pcoded-hasmenu">
+                        <a href="javascript:" class="nav-link "><span class="pcoded-micon"><i class="feather icon-box"></i></span><span class="pcoded-mtext">Categories</span></a>
+                        <ul class="pcoded-submenu">
+                            <li class=""><a href="/apps/skill" class="">Skills and Learning</a></li>
+                            <li class=""><a href="/apps/health" class="">Health and Wellbeing</a></li>
+                            <li class=""><a href="/apps/work" class="">Work Efficiency</a></li>
+                        </ul>
+                    </li>
+                    
+                    {% comment %}                     
                     <li class="nav-item pcoded-menu-caption">
                         <label>UI Element</label>
                     </li>
@@ -34,8 +46,8 @@
                             <li class=""><a href="/ui-typography.html" class="">Typography</a></li>
                             <li class=""><a href="/ui-icons.html" class="">Feather<span class="pcoded-badge label label-danger">NEW</span></a></li>
                         </ul>
-                    </li>
-                    <li class="nav-item pcoded-menu-caption">
+                    </li> {% endcomment %}
+                    {% comment %} <li class="nav-item pcoded-menu-caption">
                         <label>Forms & table</label>
                     </li>
                     <li data-username="form elements advance componant validation masking wizard picker select" 
@@ -45,56 +57,40 @@
                     <li data-username="Table bootstrap datatable footable" 
                         class="nav-item {% if 'ui-tables' in segment %} active {% endif %}">
                         <a href="/ui-tables.html" class="nav-link "><span class="pcoded-micon"><i class="feather icon-server"></i></span><span class="pcoded-mtext">Table</span></a>
-                    </li>
+                    </li> {% endcomment %}
+                    
                     <li class="nav-item pcoded-menu-caption">
-                        <label>Chart & Maps</label>
+                        <label>Analytics</label>
                     </li>
                     <li data-username="Charts Morris" 
                         class="nav-item {% if 'charts-morris' in segment %} active {% endif %}">
-                        <a href="/charts-morris.html" class="nav-link "><span class="pcoded-micon"><i class="feather icon-pie-chart"></i></span><span class="pcoded-mtext">Chart</span></a></li>
-                    <li data-username="Maps Google" 
+                        <a href="/apps/analytics" class="nav-link "><span class="pcoded-micon"><i class="feather icon-pie-chart"></i></span><span class="pcoded-mtext">Report</span></a></li>
+                    {% comment %} <li data-username="Maps Google" 
                          class="nav-item {% if 'maps-google' in segment %} active {% endif %}">
                         <a href="/maps-google.html" class="nav-link "><span class="pcoded-micon"><i class="feather icon-map"></i></span><span class="pcoded-mtext">Maps</span></a></li>
+                    
                     <li class="nav-item pcoded-menu-caption">
-                        <label>Pages</label>
-                    </li>
-                    <li data-username="Authentication Sign up Sign in reset password Change password Personal information profile settings map form subscribe" class="nav-item pcoded-hasmenu">
-                        <a href="javascript:" class="nav-link "><span class="pcoded-micon"><i class="feather icon-lock"></i></span><span class="pcoded-mtext">Authentication</span></a>
+                        <label></label>
+                    </li> {% endcomment %}
+                    {% comment %} <li data-username="Authentication Sign up Sign in reset password Change password Personal information profile settings map form subscribe" class="nav-item pcoded-hasmenu">
+                        <a  class="nav-link "><span class="pcoded-micon"><i class="feather icon-lock"></i></span><span class="pcoded-mtext">Authentication</span></a>
                         <ul class="pcoded-submenu">
-                            <li class=""><a href="/auth-reset-pass.html" class="">Reset Pass</a></li>
-                            <li class=""><a href="/login.html" class="">Login (template)</a></li>
-                            <li class=""><a href="/register.html" class="">Register (template)</a></li>
+                            <li class=""><a href="/core/templates/auth-reset-pass.html" class="">Reset Pass</a></li>
+                            <li class=""><a href="/core/templates/accounts/login.html" class="">Login (template)</a></li>
+                            <li class=""><a href="/core/templates/accounts/register.html" class="">Register (template)</a></li>
                         </ul>
-                    </li>
-                    <li data-username="Sample Page" 
+                    </li> {% endcomment %}
+                    {% comment %} <li data-username="Sample Page" 
                         class="nav-item {% if 'page-blank' in segment %} active {% endif %}">
                         <a href="/page-blank.html" class="nav-link"><span class="pcoded-micon"><i class="feather icon-sidebar"></i></span><span class="pcoded-mtext">Sample page</span></a></li>
-                    <li data-username="Sample Page" class="nav-item"><a href="/page-404.html" class="nav-link"><span class="pcoded-micon"><i class="feather icon-sidebar"></i></span><span class="pcoded-mtext">Error 404</span></a></li>
+                    <li data-username="Sample Page" class="nav-item"><a href="/page-404.html" class="nav-link"><span class="pcoded-micon"><i class="feather icon-sidebar"></i></span><span class="pcoded-mtext">Error 404</span></a></li> {% endcomment %}
 
                     <li data-username="Disabled Menu" class="nav-item">
                         <a href="{% url 'logout' %}" class="nav-link">
                             <span class="pcoded-micon"><i class="feather icon-power"></i></span><span class="pcoded-mtext">Logout</span>
                         </a>
-                    </li>
-                    <li class="nav-item pcoded-menu-caption">
-                        <label>More Resources</label>
-                    </li>                    
-                    <li data-username="Support Page" class="nav-item ">
-                        <a target="_blank" href="https://appseed.us/support" class="nav-link">
-                            <span class="pcoded-micon">
-                                <i class="feather icon-headphones"></i>
-                            </span>
-                            <span class="pcoded-mtext">Support</span>
-                        </a>
-                    </li>
-                    <li data-username="Support Page" class="nav-item ">
-                        <a target="_blank" href="https://appseed.us/admin-dashboards/django-dashboard-dattaable-pro" class="nav-link">
-                            <span class="pcoded-micon">
-                                <i class="feather icon-tag"></i>
-                            </span>
-                            <span class="pcoded-mtext">PRO Version</span>
-                        </a>
-                    </li>                     
+                    </li> 
+                                        
                 </ul>
             </div>
         </div>
