--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -20,10 +20,10 @@
                         <div class="col-md-6 col-xl-4">
                             <div class="card daily-sales">
                                 <div class="card-block">
-                                    <h6 class="mb-4">Daily Sales</h6>
+                                    <h6 class="mb-4">Work Efficiency</h6>
                                     <div class="row d-flex align-items-center">
                                         <div class="col-9">
-                                            <h3 class="f-w-300 d-flex align-items-center m-b-0"><i class="feather icon-arrow-up text-c-green f-30 m-r-10"></i>$ 249.95</h3>
+                                            <h3 class="f-w-300 d-flex align-items-center m-b-0"><i class="feather icon-trending-up text-c-blue f-30 m-r-10"></i></h3>
                                         </div>
 
                                         <div class="col-3 text-right">
@@ -31,7 +31,7 @@
                                         </div>
                                     </div>
                                     <div class="progress m-t-30" style="height: 7px;">
-                                        <div class="progress-bar progress-c-theme" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar progress-c-theme2" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                             </div>
@@ -41,17 +41,17 @@
                         <div class="col-md-6 col-xl-4">
                             <div class="card Monthly-sales">
                                 <div class="card-block">
-                                    <h6 class="mb-4">Monthly Sales</h6>
+                                    <h6 class="mb-4">Health and Wellbeing</h6>
                                     <div class="row d-flex align-items-center">
                                         <div class="col-9">
-                                            <h3 class="f-w-300 d-flex align-items-center  m-b-0"><i class="feather icon-arrow-down text-c-red f-30 m-r-10"></i>$ 2.942.32</h3>
+                                            <h3 class="f-w-300 d-flex align-items-center  m-b-0"><i class="feather icon-user text-c-green f-30 m-r-10"></i></h3>
                                         </div>
                                         <div class="col-3 text-right">
-                                            <p class="m-b-0">36%</p>
+                                            <p class="m-b-0">75%</p>
                                         </div>
                                     </div>
                                     <div class="progress m-t-30" style="height: 7px;">
-                                        <div class="progress-bar progress-c-theme2" role="progressbar" style="width: 35%;" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar progress-c-theme2" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                             </div>
@@ -61,17 +61,17 @@
                         <div class="col-md-12 col-xl-4">
                             <div class="card yearly-sales">
                                 <div class="card-block">
-                                    <h6 class="mb-4">Yearly Sales</h6>
+                                    <h6 class="mb-4">Skills and Learning</h6>
                                     <div class="row d-flex align-items-center">
                                         <div class="col-9">
-                                            <h3 class="f-w-300 d-flex align-items-center  m-b-0"><i class="feather icon-arrow-up text-c-green f-30 m-r-10"></i>$ 8.638.32</h3>
+                                            <h3 class="f-w-300 d-flex align-items-center  m-b-0"><i class="feather icon-award text-c-yellow f-30 m-r-10"></i></h3>
                                         </div>
-                                        <div class="col-3 text-right">
+                                        <div class="col-3 text-left">
                                             <p class="m-b-0">80%</p>
                                         </div>
                                     </div>
                                     <div class="progress m-t-30" style="height: 7px;">
-                                        <div class="progress-bar progress-c-theme" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar progress-c-theme2" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                             </div>
