--- a/core/templates/health.html
+++ b/core/templates/health.html
@@ -1,23 +1,218 @@
-{% extends "layouts/base.html" %}
-
-{% block title %}Health and Wellbeing{% endblock %} 
+{% extends "layouts/base.html" %} {% block title %}Health and Wellbeing
+{%endblock %}
 
 <!-- Specific CSS goes HERE -->
 {% block stylesheets %}
+<style>
+  .tab-bmi {
+    font-family: Arial;
+  }
 
-    <link rel="stylesheet" href="/static/assets/plugins/chart-morris/css/morris.css">
+  /*style the tab*/
 
-{% endblock stylesheets %}
+  .tab-bmi .tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+  }
 
-{% block content %}
+  /*the buttons*/
+  .tab-bmi .tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-size: 17px;
+  }
+
+  /*add hover to the buttons*/
+  .tab-bmi .tab button:hover {
+    background-color: #ddd;
+  }
+
+  /*Create an active/current tablink class*/
+  .tab-bmi .tab button.active {
+    background-color: #ccc;
+  }
+
+  /*style the tb content*/
+  .tab-bmi .tabcontent {
+    display: none;
+    padding: 6px 12px;
+    --webkit-animation: fadeEffect 1s;
+    animation: fadeEffect 1s;
+  }
+
+  @-webkit-keyframes fadeEffect {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
+  @keyframes fadeEffect {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacoty: 1;
+    }
+  }
+</style>
+<link
+  rel="stylesheet"
+  href="/static/assets/plugins/chart-morris/css/morris.css"
+/>
+
+{% endblock stylesheets %} {% block content %}
+
+<div class="card p-2 mt-3">
+  <div class="form-row">
+    <!-#########################Col1###############-->
+    <div class="col-md-6 col-sm-12 col-xs-12">
+      <div class="tab-bmi">
+        <h3>Bmi Calculator</h3>
+        <div class="tab">
+          <button class="tablinks" onclick="openUnit(event, 'metric')">
+            Metric
+          </button>
+          <button class="tablinks" onclick="openUnit(event, 'imperial')">
+            Imperial
+          </button>
+        </div>
+
+        <div class="tabcontent" id="metric">
+          <form method="post">
+            {% csrf_token %}
+            <div class="col-12">
+              <label for="">Weight: </label>
+              <input
+                type="text"
+                name="weight-metric"
+                class="form-control"
+                required
+                placeholder="kg"
+              />
+            </div>
+
+            <div class="col-12">
+              <label for="">Height: </label>
+              <input
+                type="text"
+                name="height-metric"
+                class="form-control"
+                required
+                placeholder="m"
+              />
+            </div>
+
+            <button
+              type="submit"
+              class="btn btn-primary mt-5"
+              action="{% url 'home' %}"
+            >
+              Calculate
+            </button>
+          </form>
+        </div>
+
+        <div class="tabcontent" id="imperial">
+          <form method="post">
+            {% csrf_token %}
+            <div class="col-12">
+              <label for="">Weight: </label>
+              <input
+                type="text"
+                name="weight-imperial"
+                class="form-control"
+                required
+                placeholder="lbs"
+              />
+            </div>
+
+            <div class="col-12">
+              <label for="">Height: </label>
+              <div class="input-group">
+                <input
+                  type="text"
+                  name="feet"
+                  placeholder="feet"
+                  class="form-control"
+                />
+                <input
+                  type="text"
+                  name="inches"
+                  placeholder="inches"
+                  class="form-control"
+                />
+              </div>
+            </div>
+
+            <button
+              type="submit"
+              class="btn btn-primary mt-5"
+              action="{% url 'home' %}"
+            >
+              Calculate
+            </button>
+          </form>
+        </div>
+      </div>
+
+      <!-#########################Col2###############-->
+    </div>
+
+    {% if bmi %}
+    <div class="col-md-6 col-sm-12 col-xs-12">
+      <h2>Result</h2>
+      <p>Your BMI = {{bmi}} kg/m² | {{state}}</p>
+      <div class="progress">
+        <div class="progress-bar bg-danger" style="width: 25%">Underweight</div>
+        <div class="progress-bar bg-success" style="width: 25%">Normal</div>
+        <div class="progress-bar bg-warning" style="width: 25%">Overweight</div>
+        <div class="progress-bar bg-danger" style="width: 25%">Obesity</div>
+      </div>
+    </div>
+    {% endif %}
+  </div>
+
+  {{div|safe}}
+</div>
 
 {% endblock content %}
 
 <!-- Specific Page JS goes HERE  -->
 {% block javascripts %}
+<script>
+  /*Save it*/
 
-    <script src="/static/assets/plugins/chart-morris/js/raphael.min.js"></script>
-    <script src="/static/assets/plugins/chart-morris/js/morris.min.js"></script>
-    <script src="/static/assets/js/pages/chart-morris-custom.js"></script>
+  $(document).ready(function () {
+    $('[data-toggle="popover"]').popover();
+  });
+
+  /*BMI TAB*/
+
+  function openUnit(evt, unitName) {
+    var i, tabcontent, tablinks;
+    tabcontent = document.getElementsByClassName("tabcontent");
+    for (i = 0; i < tabcontent.length; i++) {
+      tabcontent[i].style.display = "none";
+    }
+    tablinks = document.getElementsByClassName("tablinks");
+    for (i = 0; i < tablinks.length; i++) {
+      tablinks[i].className = tablinks[i].className.replace(" active", "");
+    }
+    document.getElementById(unitName).style.display = "block";
+    evt.currentTarget.className += " active";
+  }
+</script>
+<script src="/static/assets/plugins/chart-morris/js/raphael.min.js"></script>
+<script src="/static/assets/plugins/chart-morris/js/morris.min.js"></script>
+<script src="/static/assets/js/pages/chart-morris-custom.js"></script>
 
 {% endblock javascripts %}
