--- a/core/templates/skills.html
+++ b/core/templates/skills.html
@@ -6,9 +6,17 @@
 {% block stylesheets %}
 
     <link rel="stylesheet" href="/static/assets/plugins/chart-morris/css/morris.css">
-
+<style>
+.form_data{
+ position: absolute;
+ top: 50%;
+ left: 50%;
+ transform: translate(-50%,-50%);
+}
+</style>
 {% endblock stylesheets %}
 
+{%load crispy_forms_tags %} 
 {% block content %}
 
     <div class="pcoded-content">
@@ -24,36 +32,64 @@
                     
                         <div class="col-md-12 col-xl-4">
                             <div class="card yearly-sales">
-                                <div class="card-block">
-                                    <h6 class="mb-4">Skills and Learning</h6>
-                                    <div class="row d-flex align-items-center">
-                                        <div class="col-9">
-                                            <h3 class="f-w-300 d-flex align-items-center  m-b-0"><i class="feather icon-award text-c-yellow f-30 m-r-10"></i></h3>
-                                        </div>
-                                        <div class="col-3 text-left">
-                                            <p class="m-b-0">80%</p>
-                                        </div>
-                                    </div>
-                                    <div class="progress m-t-30" style="height: 7px;">
-                                        <div class="progress-bar progress-c-theme2" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
-                                </div>
-                            </div>
+                                                           </div>
                         </div>
                     </div>
-                <div class="card">
-                    <h5 class="card-header">Achievments</h5>
+                    
+                {% comment %} <div class="card">
+                    <h5 class="card-header">Cource Recommendation</h5>
                     <div class="card-body">
-                    <h5 class="card-title">Certification Name</h5>
+                    <h5 class="card-title">Recommendation List</h5>
                     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                     <a href="#" class="btn btn-primary">View</a>
                     </div>
-                </div>
+                </div> {% endcomment %}
+            
 
+<div class='card'>
+<h5 class="card-header text-center">Course Recommendation</h5>
+<div class="container">
+ <div class="row justify-content-center">
+<form  action="/apps/skill" method="post">
+    {% csrf_token %}
+    {% comment %} {{ forms|crispy }}  {% endcomment %}
+    {{ forms.input_text}} 
+    <input type="submit" value="Search"> 
+</form>
+</div>
+</div>
 
+<div class='card p-5'>
+<h5 class="card-title text-center">Recommendation List</h5>
+<div class="table-responsive">
+<table class='table table-sm table-striped'>
+<tr>
+  <th>Course Title</th>
+  <th>Subject</th>
+  <th>Url</th>
+  <th>Duration</th>
+  <th>Similarity Scores</th>
+</tr>
+{% for r in val_rec %}
+<tr>
+  <th> {{ r.0 }}</th>
+  <th> {{ r.1 }}</th>
+  <th><a href="{{ r.2 }}">Link</th>
+  <th> {{ r.3 }}</th>
+  <th> {{ r.4 }}</th>
+  {% comment %} <th> {{ val_rec.course_title }}</th>
+  <th> {{ val_rec.similarity_scores }}</th>
+  <th> {{ result.date }}</th> {% endcomment %}
+</tr> 
+{% endfor %}
+</table>
+</div>
+</div>
+</div>
 
                 </div>
             </div>
+        </div>
         </div>
 {% endblock content %}
 
